--- a/main.css
+++ b/main.css
@@ -1,7 +1,6 @@
 * {
   font-family: sans-serif;
   box-sizing: border-box;
-  margin:0;
 }
 body
 {
@@ -13,9 +12,51 @@ h1 {
 #product-overview {
   background: #ff1b68;
   padding: 20px;
-  height: 100%;
+  height: 300px;
+  margin: 0;
 }
 
 .section-title {
   color: darkblue;
+}
+.main-header
+{
+    background: #2ddf5c;
+    padding:8px 16px;
+    vertical-align: middle;
+}
+.main-header__brand
+{
+    color:#0e4f1f;
+    text-decoration: none;
+    font-weight: bold;
+}
+.main-nav__item
+{
+    display:inline-block;
+    text-decoration: none;
+    margin:0 16px;
+}
+.main-nav__item a
+{
+    text-decoration: none;
+    color: #0e4f1f;
+}
+.main-nav
+{
+    display: inline-block;
+    text-align: right;
+    width: calc(100% - 55px);
+    vertical-align: middle;
+}
+header > div
+{
+    display:inline-block;                                                                                                                                                               
+}
+
+.main-nav__items
+{
+    margin:0;
+    padding:0;
+    list-style:none;
 }
