--- a/main.css
+++ b/main.css
@@ -5,18 +5,17 @@
 body {
   margin: 0;
 }
-h1 {
-  color: white;
-}
 #product-overview {
   background: url("freedom.jpg");
   padding: 20px;
   height: 300px;
   margin: 0;
+  color: white;
 }
 
 .section-title {
   color: darkblue;
+  text-align: center;
 }
 .main-header {
   background: #2ddf5c;
@@ -73,5 +72,15 @@ header > div {
     background-color: white;
     border: none;
     color: #ff1b68;
-   
+}
+
+.plan
+{
+    background: #d5ffdc;
+    text-align: center;
+    padding:16px;
+    margin:8px;
+    display: inline-block;
+    width: 30%;
+    vertical-align: middle;
 }
