--- a/main.css
+++ b/main.css
@@ -109,3 +109,38 @@ header > div {
 {
     margin:5px
 }
+
+.plan__title
+{
+    color: #0e4f1f;
+}
+.plan__price
+{
+    color:darkgray;
+}
+.plan--recommended .plan__price
+{
+    color: #0e4f1f;
+}
+.plan--recommended .plan__title
+{
+    color: #d5ffdc;
+}
+.plan__cta
+{
+    background: #0e4f1f;
+    padding: 8px;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5);
+    text-decoration: none;
+    font-family: sans-serif;
+    font-weight: bold;
+    cursor: pointer;
+}
+.plan__cta:hover
+{
+    background-color: white;
+    color: #0e4f1f;
+}
