--- a/main.css
+++ b/main.css
@@ -97,3 +97,10 @@
     color: darkblue;
     text-align: center;
   }
+
+  .plan__list
+  {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+  }
