--- a/packages/packages.css
+++ b/packages/packages.css
@@ -1,6 +1,6 @@
 main
 {
-    padding-top: 30px;
+    padding-top: 40px;
 }
 .package
 {
@@ -9,12 +9,13 @@ main
     margin:16px 0px;
     padding: 16px;
     width: 70%;
-
+    position: relative;
 }
 .package:hover
 {
     box-shadow: 2px 2px 4px rgba(0,0,0,0.5);
     border-color: tomato;
+    position: relative;
 }
 a
 {
@@ -56,4 +57,23 @@ a
 #plus,#premium
 {
     border-left: none;
+}
+.background
+{
+    background: url("../images/plans-background.jpg");
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    z-index: -1;
+}
+.package__badge
+{
+    position: absolute;
+    top:0;
+    right: 0;
+    margin: 16px;
+    padding: 8px;
+    background-color: #ff1b68;
+    color: white;
+    font-size: 12px;
 }
