--- a/shared.css
+++ b/shared.css
@@ -101,3 +101,11 @@ a
 {
     text-decoration: none;
 }
+header
+{
+    position: fixed;
+    top:0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+}
