--- a/main.css
+++ b/main.css
@@ -1,106 +1,105 @@
-.plan
-{
-    background: #d5ffdc;
-    text-align: center;
-    padding:16px;
-    margin:8px;
-    display: inline-block;
-    width: 30%;
-    vertical-align: middle;
+.plan {
+  background: #d5ffdc;
+  text-align: center;
+  padding: 16px;
+  margin: 8px;
+  display: inline-block;
+  width: 30%;
+  vertical-align: middle;
 }
 
-.plan--recommended
-{
-    background:#19b84c;
-    color: white;
-    box-shadow: 2px 2px 5px 3px rgba(0,0,0,0.4);
+.plan--recommended {
+  background: #19b84c;
+  color: white;
+  box-shadow: 2px 2px 5px 3px rgba(0, 0, 0, 0.4);
 }
-.plan__annotation
-{
-    background: white;
-    padding: 8px;
-    color: #0e4f1f;
-    border-radius: 8px;
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5);
+.plan__annotation {
+  background: white;
+  padding: 8px;
+  color: #0e4f1f;
+  border-radius: 8px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
-.plan ul
-{
-    list-style: none;
-    padding: 0;
+.plan ul {
+  list-style: none;
+  padding: 0;
 }
-.plan ul li 
-{
-    margin:5px
+.plan ul li {
+  margin: 5px;
 }
 
-.plan__title
-{
-    color: #0e4f1f;
+.plan__title {
+  color: #0e4f1f;
 }
-.plan__price
-{
-    color:darkgray;
+.plan__price {
+  color: darkgray;
 }
-.plan--recommended .plan__price
-{
-    color: #0e4f1f;
+.plan--recommended .plan__price {
+  color: #0e4f1f;
 }
-.plan--recommended .plan__title
-{
-    color: #d5ffdc;
+.plan--recommended .plan__title {
+  color: #d5ffdc;
 }
-.plan__cta
-{
-    background: #0e4f1f;
-    padding: 8px;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 2px 2px 2px 2px rgba(0,0,0,0.5);
-    text-decoration: none;
-    font-family: sans-serif;
-    font-weight: bold;
-    cursor: pointer;
+.plan__cta {
+  background: #0e4f1f;
+  padding: 8px;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.5);
+  text-decoration: none;
+  font-family: sans-serif;
+  font-weight: bold;
+  cursor: pointer;
 }
-.plan__cta:hover
-{
-    background-color: white;
-    color: #0e4f1f;
+.plan__cta:hover {
+  background-color: white;
+  color: #0e4f1f;
 }
-.features ul li
-{
-    display: inline-block;
-    width: 30%;
-    font-weight: bold;
-    font-size: 20px;
+.features ul li {
+  display: inline-block;
+  width: 30%;
+  font-weight: bold;
+  font-size: 20px;
 }
-.features
-{
-    background: #ff1b68;
-    text-align: center;
-    color: white;
-    margin-top: 50px;
-    padding: 20px;
+.features {
+  background: #ff1b68;
+  text-align: center;
+  color: white;
+  margin-top: 50px;
+  padding: 20px;
 }
-.feature__image
-{
-    background-color: rgb(255, 203, 203);
-    border-radius: 50%;
-    border: 2px solid #0e4f1f;
-    width: 128px;
-    height: 128px;
-    margin: auto;
+.feature__image {
+  background-color: rgb(255, 203, 203);
+  border-radius: 50%;
+  border: 2px solid #0e4f1f;
+  width: 128px;
+  height: 128px;
+  margin: auto;
 }
 
 .section-title {
-    color: darkblue;
-    text-align: center;
-  }
+  color: darkblue;
+  text-align: center;
+}
 
-  .plan__list
-  {
-    width: 80%;
-    margin: auto;
-    text-align: center;
-  }
+.plan__list {
+  width: 80%;
+  margin: auto;
+  text-align: center;
+}
+#product-overview {
+  margin-top: 20px;
+  background-image: url("freedom.jpg");
+  background-size: 100%;
+  background-repeat: no-repeat;
+  height: 700px;
+  padding: 20px;
+  margin: 0;
+  color: white;
+  margin: auto;
+}
+main {
+  margin-top: 20px;
+}
