--- a/main.css
+++ b/main.css
@@ -88,7 +88,6 @@
   width: 80%;
   margin: auto;
   text-align: center;
-  height: 50vh;
 }
 #product-overview {
   margin-top: 20px;
@@ -100,7 +99,7 @@
     url("freedom.jpg");
   background-size: 100%;
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 600px;
   padding: 20px;
   margin: 0;
   color: white;
